--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 *.log
 
 #Ignore this folder since it is installed manually rather than install via TPM
-./config/tmux/plugins/*
+.config/tmux/plugins/*
