fixed: tmux plugins are not reading, created symlink

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,8 @@
+# Set default shell
+set-option -g default-shell /bin/zsh
+set-option -g default-shell /usr/bin/zsh
+
+
 # Keybinds
 set -g mouse on
 setw -g mode-keys vi
@@ -15,4 +20,4 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
