--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,7 +1,8 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source":  "~/.linux-dev-setup/.config/fastfetch/bongo-cat.txt"
+    "source": "~/.linux-dev-setup/.config/fastfetch/img/bongo-cat.txt",
+    "width": 65
   },
   "modules": [
     "title",
