--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,8 +1,11 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.linux-dev-setup/.config/fastfetch/img/bongo-cat.txt",
-    "width": 65
+    "source": "~/.linux-dev-setup/.config/fastfetch/logo/bongo-cat.txt",
+    "width": 65,
+    "color": {
+      "1": "magenta"
+    }
   },
   "modules": [
     "title",
