--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,10 +1,15 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.linux-dev-setup/.config/fastfetch/logo/bongo-cat.txt",
-    "width": 65,
-    "color": {
-      "1": "magenta"
+    "type": "sixel",
+    "source": "~/.linux-dev-setup/.config/fastfetch/logo/sprite-mauve.png",
+    "width": 32
+  },
+  "display": {
+    "separator": ": ",
+    "color":{
+      "keys": "magenta",
+      "title": "magenta"
     }
   },
   "modules": [
@@ -25,8 +30,6 @@
     "terminalfont",
     "cpu",
     "memory",
-    "localip",
-    "publicip",
     "break",
     "colors"
   ]
