--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -2,7 +2,7 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "type": "sixel",
-    "source": "~/.linux-dev-setup/.config/fastfetch/logo/sprite-mauve.png",
+    "source": "~/dotfiles/.config/fastfetch/logo/sprite-mauve.png",
     "width": 32
   },
   "display": {
