--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,21 +2,23 @@
 set-option -g default-shell /bin/zsh
 set-option -g default-shell /usr/bin/zsh
 
+# Pane Display
+set -g base-index 1
+setw -g pane-base-index 1
+
+bind _ split-window -hc "#{pane_current_path}"
+bind - split-window -vc "#{pane_current_path}"
 
 # Keybinds
 set -g mouse on
 setw -g mode-keys vi
 
+set -g prefix C-Space
+bind C-Space send-prefix
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
