fix: lsp in vue with typescript

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,6 +5,7 @@ set-option -g default-shell /usr/bin/zsh
 # Pane Display
 set -g base-index 1
 setw -g pane-base-index 1
+set -g default-terminal "tmux-256color"
 
 bind _ split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
