--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,6 +2,9 @@
 set-option -g default-shell /bin/zsh
 set-option -g default-shell /usr/bin/zsh
 
+set-option -g set-titles on
+set-option -g allow-rename off
+
 # Pane Display
 set -g base-index 1
 setw -g pane-base-index 1
@@ -21,6 +24,19 @@ bind C-Space send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+# Catppuccin
+set -g @catppuccin_flavor 'latte'
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_current_text "#W"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
 run '~/.config/tmux/plugins/tpm/tpm'
+
+set -g status-left ""
+set -g status-right '#[fg=#{@thm_crust},bg=#{@thm_teal}] session: #S '
+
+# Ensure that everything on the right side of the status line
+# is included.
+set -g status-right-length 100
