--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -2,14 +2,14 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "type": "sixel",
-    "source": "~/dotfiles/.config/fastfetch/logo/sprite-mauve.png",
+    "source": "~/dotfiles/.config/fastfetch/logo/gruv-blue-sprite.png",
     "width": 32
   },
   "display": {
     "separator": ": ",
     "color":{
-      "keys": "magenta",
-      "title": "magenta"
+      "keys": "blue",
+      "title": "blue"
     }
   },
   "modules": [
