--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,6 +2,7 @@
 set-option -g default-shell /bin/zsh
 set-option -g default-shell /usr/bin/zsh
 
+
 set-option -g set-titles on
 set-option -g allow-rename off
 
@@ -24,6 +25,9 @@ bind C-Space send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+set -g @plugin 'egel/tmux-gruvbox'
+
+
 # Catppuccin
 set -g @catppuccin_flavor 'latte'
 set -g @catppuccin_window_default_text "#W"
@@ -31,12 +35,15 @@ set -g @catppuccin_window_text "#W"
 set -g @catppuccin_window_current_text "#W"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
+# run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
 run '~/.config/tmux/plugins/tpm/tpm'
 
-set -g status-left ""
-set -g status-right '#[fg=#{@thm_crust},bg=#{@thm_teal}] session: #S '
-
-# Ensure that everything on the right side of the status line
-# is included.
-set -g status-right-length 100
+set -g @tmux-gruvbox 'light'
+set -g @tmux-gruvbox-statusbar-alpha 'true'
+set -g @tmux-gruvbox-left-status-a '#S' # tmux's session name
+# set date in US notation
+set -g @tmux-gruvbox-right-status-x '%m/%d/%Y' # e.g.: 01/31/2024
+# set US time format
+set -g @tmux-gruvbox-right-status-y '%I:%M %p' # 09:54 PM
+# display hostname and enhance section with other plugin
+set -g @tmux-gruvbox-right-status-z '#h #{tmux_mode_indicator}'
