--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,8 +10,8 @@ include current-theme.conf
 # END_KITTY_THEME
 
 # BEGIN_KITTY_FONTS
-font_family      family="FiraMono Nerd Font Mono"
-bold_font        auto
+font_family      family='FiraMono Nerd Font Mono' postscript_name=FiraMonoNFM-Regular
+bold_font        family='FiraMono Nerd Font Mono' postscript_name=FiraMonoNFM-Bold
 italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
