--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,6 +1,7 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
+    "type": "iterm",
     "source": "~/dotfiles/.config/fastfetch/logo/gruv-blue-sprite.png",
     "width": 32
   },
