--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,7 +28,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'egel/tmux-gruvbox'
 
 
-# Catppuccin
+# Theme: Catppuccin
 set -g @catppuccin_flavor 'latte'
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_text "#W"
@@ -38,6 +38,7 @@ set -g @catppuccin_window_current_text "#W"
 # run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
 run '~/.config/tmux/plugins/tpm/tpm'
 
+# Theme: Gruvbox
 set -g @tmux-gruvbox 'light'
 set -g @tmux-gruvbox-statusbar-alpha 'true'
 set -g @tmux-gruvbox-left-status-a '#S' # tmux's session name
