fix: colors in fastfetch

--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -13,7 +13,7 @@
     "modules": [
         {
             "type": "custom",
-            "format": "╔════════════════════════{#34}I use Neovim btw!═══════════════════════════╗"
+            "format": "╔════════════════════════I use Neovim btw!═══════════════════════════╗"
         },
         {
             "key": "     {#31} user    {#keys}",
