--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -27,16 +27,17 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'egel/tmux-gruvbox'
 
+set -g status-bg cyan
+set -g status-fg black
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
 
 # Theme: Catppuccin
 set -g @catppuccin_flavor 'latte'
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_text "#W"
 set -g @catppuccin_window_current_text "#W"
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
-run '~/.config/tmux/plugins/tpm/tpm'
 
 # Theme: Gruvbox
 set -g @tmux-gruvbox 'light'
