--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -8,4 +8,7 @@ opacity = 0.8
 
 [font]
 normal = { family = "FiraCode Nerd Font", style = "Regular"}
-size = 16.0
+size = 14.0
+
+[colors]
+cursor = { text="#faf4ed", cursor = "#d7827e"}
