--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,8 +1,7 @@
 # BEGIN_KITTY_THEME
-# Catppuccin-Latte
+# Rosé Pine Dawn
 include current-theme.conf
 # END_KITTY_THEME
-# font_family      Fira Code Regular
 
 
 # BEGIN_KITTY_FONTS
@@ -16,3 +15,5 @@ font_size 15
 
 cursor_trail 3
 cursor_trail_decay 0.1 0.4
+
+hide_window_decorations yes
