styled: waybar and hyprland with hypland ecosystems also added wallpapers

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -17,7 +17,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,preferred,auto,1.0
 
-
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -40,8 +39,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar
-
+exec-once = waybar & hypridle & hyprpaper & swaync
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -51,7 +49,6 @@ exec-once = waybar
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
 
 #####################
 ### LOOK AND FEEL ###
@@ -96,7 +93,7 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
 
@@ -184,9 +181,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -268,6 +265,9 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# Custom Binds
+bind = , PRINT, exec, hyprshot -m output
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
