--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -1,89 +1,161 @@
-// Inspired by Catnap
+// Load with --load-config examples/2.jsonc
+// Note that you must replace the image path to an existing image to display it.
+
 {
-  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-  "logo": {
-    "source": "~/.dotfiles/fastfetch/.config/fastfetch/logo/ascii-art.txt",
-    "width": 1,
-    "color": {
-      "1": "cyan"
+    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+    "logo": {
+        "source": "~/.config/fastfetch/logo/ascii-art.txt",
+        "color": {
+          "1": "cyan"
+        },
+        "padding": {
+            "top": 2
+        }
     },
-    "padding": {
-      "top": 1,
+    "display": {
+        "separator": " -> ",
+        "constants": [
+            "──────────────────────────────"
+        ]
     },
-  },
-  "display": {
-    "separator": " ",
-  },
-  "modules": [
-    {
-      "type": "custom",
-      "format": "╔════════════════════════I use Neovim btw!═══════════════════════════╗",
-    },
-    {
-      "key": "     {#31} user    {#keys}",
-      "type": "title",
-      "format": "{user-name}",
-    },
-    {
-      "key": "     {#32}󰇅 hname   {#keys}",
-      "type": "title",
-      "format": "{host-name}",
-    },
-    {
-      "key": "     {#33}󰅐 uptime  {#keys}",
-      "type": "uptime",
-    },
-    {
-      "key": "     {#34}{icon} distro  {#keys}",
-      "type": "os",
-    },
-    {
-      "key": "     {#35} kernel  {#keys}",
-      "type": "kernel",
-    },
-    {
-      "key": "     {#36}󰇄 desktop {#keys}",
-      "type": "de",
-    },
-    {
-      "key": "     {#31} term    {#keys}",
-      "type": "terminal",
-    },
-    {
-      "key": "     {#32} shell   {#keys}",
-      "type": "shell",
-    },
-    {
-      "type": "custom",
-      "format": "╠════════════════════════════════════════════════════════════════════╣",
-    },
-    {
-      "key": "     {#33}󰍛 cpu     {#keys}",
-      "type": "cpu",
-      "showPeCoreCount": true,
-    },
-    {
-      "key": "     {#34}󰉉 disk    {#keys}",
-      "type": "disk",
-      "folders": "/",
-    },
-    {
-      "key": "     {#35} memory  {#keys}",
-      "type": "memory",
-    },
-    {
-      "key": "     {#36}󰩟 network {#keys}",
-      "type": "localip",
-      "format": "{ipv4} ({ifname})",
-    },
-    {
-      "key": "     {#39} colors  {#keys}",
-      "type": "colors",
-      "symbol": "circle",
-    },
-    {
-      "type": "custom",
-      "format": "╚════════════════════════════════════════════════════════════════════╝",
-    },
-  ],
+    "modules": [
+        {
+            "type": "custom",
+            "format": "┌{$1}{$1}┐",
+            "outputColor": "90"
+        },
+        {
+            "type": "title",
+            "keyWidth": 10
+        },
+        {
+            "type": "custom",
+            "format": "└{$1}{$1}┘",
+            "outputColor": "90"
+        },
+        {
+            "type": "custom",
+            "format": " {#90}  {#31}  {#32}  {#33}  {#34}  {#35}  {#36}  {#37}  {#38}  {#39}       {#38}  {#37}  {#36}  {#35}  {#34}  {#33}  {#32}  {#31}  {#90}"
+        },
+        {
+            "type": "custom",
+            "format": "┌{$1}{$1}┐",
+            "outputColor": "90"
+        },
+        {
+            "type": "os",
+            "key": "{icon} OS",
+            "keyColor": "yellow"
+        },
+        {
+            "type": "kernel",
+            "key": "│ ├",
+            "keyColor": "yellow"
+        },
+        {
+            "type": "packages",
+            "key": "│ ├󰏖",
+            "keyColor": "yellow"
+        },
+        {
+            "type": "shell",
+            "key": "│ └",
+            "keyColor": "yellow"
+        },
+        {
+            "type": "wm",
+            "key": " DE/WM",
+            "keyColor": "blue"
+        },
+        {
+            "type": "lm",
+            "key": "│ ├󰧨",
+            "keyColor": "blue"
+        },
+        {
+            "type": "wmtheme",
+            "key": "│ ├󰉼",
+            "keyColor": "blue"
+        },
+        {
+            "type": "icons",
+            "key": "│ ├󰀻",
+            "keyColor": "blue"
+        },
+        {
+            "type": "terminal",
+            "key": "│ ├",
+            "keyColor": "blue"
+        },
+        {
+            "type": "wallpaper",
+            "key": "│ └󰸉",
+            "keyColor": "blue"
+        },
+        {
+            "type": "host",
+            "key": "󰌢 PC",
+            "keyColor": "green"
+        },
+        {
+            "type": "cpu",
+            "key": "│ ├󰻠",
+            "keyColor": "green"
+        },
+        {
+            "type": "gpu",
+            "key": "│ ├󰍛",
+            "keyColor": "green"
+        },
+        {
+            "type": "disk",
+            "key": "│ ├",
+            "keyColor": "green"
+        },
+        {
+            "type": "memory",
+            "key": "│ ├󰑭",
+            "keyColor": "green"
+        },
+        {
+            "type": "swap",
+            "key": "│ ├󰓡",
+            "keyColor": "green"
+        },
+        {
+            "type": "uptime",
+            "key": "│ ├󰅐",
+            "keyColor": "green"
+        },
+        {
+            "type": "display",
+            "key": "│ └󰍹",
+            "keyColor": "green"
+        },
+        {
+            "type": "sound",
+            "key": " SND",
+            "keyColor": "cyan"
+        },
+        {
+            "type": "player",
+            "key": "│ ├󰥠",
+            "keyColor": "cyan"
+        },
+        {
+            "type": "media",
+            "key": "│ └󰝚",
+            "keyColor": "cyan"
+        },
+        {
+            "type": "custom",
+            "format": "└{$1}{$1}┘",
+            "outputColor": "90"
+        },
+        "break",
+        {
+            "type": "custom",
+            "format": " {#90}  {#31}  {#32}  {#33}  {#34}  {#35}  {#36}  {#37}  {#38}  {#39}       {#38}  {#37}  {#36}  {#35}  {#34}  {#33}  {#32}  {#31}  {#90}"
+        }
+    ]
 }
